Environment/local/access/splitwise/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splitwise-local
  namespace: splitwise-dev
spec:
  ingressClassName: traefik
  rules:
    - host: splitwise.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: splitwise-export
                port:
                  number: 80
